# drift

./: .gitignore
.github/workflows/: ci.yml  engine-binary-release.yml
drift v3/: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml
drift v3/.github/: PULL_REQUEST_TEMPLATE.md
drift v3/crates/drift-engine/: Cargo.toml
drift v3/crates/drift-engine/src/: candidate_command.rs  check_command.rs  diff.rs  facts.rs  lib.rs  main.rs  next_routes.rs  protocol.rs  rules.rs  security_capabilities.rs  security_control_flow.rs  security_facts.rs  security_patterns.rs  security_phase6.rs  security_proof.rs  security_rules.rs
drift v3/crates/drift-engine/src/frameworks/: mod.rs
drift v3/crates/drift-engine/tests/: candidate_inference.rs  diff_scope.rs  direct_data_access_rule.rs  engine_basics.rs  graph_backed_check.rs  next_routes.rs  scale_gates.rs  security_capabilities.rs  security_check_repo_auth.rs  security_check_repo_phase4.rs  security_check_repo_phase5.rs  security_check_repo_phase6.rs  security_check_repo_request_validation.rs  security_control_flow.rs  security_facts.rs  security_phase6.rs  security_rules.rs  stream_graph.rs  typescript_facts.rs
drift v3/docs/: current-state-architecture-review.md  current-state-deep-audit.md  drift-system-inventory-2026-05-21.md  drift-v1-product-technical-spec.md
drift v3/scripts/: assert-release-versions.mjs  generate-release-proof.mjs  prepare-engine-package.mjs  prepare-npm-publish-manifests.mjs  run-beta-proof.mjs  stage-engine-package.mjs  (+2 more)
(+194 files in other folders)
