[package]
name = "drift-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.9"
tree-sitter = "0.25.10"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = "3.14.0"
